--- a/_posts/2021-05-26-dataviz-makeover-1/dataviz-makeover-1.Rmd
+++ b/_posts/2021-05-26-dataviz-makeover-1/dataviz-makeover-1.Rmd
@@ -91,7 +91,7 @@ No|Step      |Action
 21|The final dashboard is ready!| ![](img/img35.PNG)
 
 # 5.0 Derived Insights
-1. In this six regions, Hongkong has the lowest imports and the second highest exports, and both of imports and exports amounts change relatively flat, with a slow upward trend. So the net exports of Hongkong is the highest. Hongkong has strong trade surplus and is in a favorable position in the foreign trade, but Hongkong may also face the problem of excessive external dependence.
+1. In this six regions, Hongkong has the lowest imports and the second highest exports, and both of imports and exports amounts change relatively flat, with a slow upward trend. So the net exports of Hongkong is the highest. Hongkong has strong trade surplus and is in a favorable position in the foreign trade, but Hongkong may also face the problem of excessive external dependence(Singapore).
 
 ![](img/img37.jpg)
 2. In this six regions, the Mainland China has the highest imports and exports, but the lines of imports and exports are dramatic fluctuations. Most of the time, the Mainland China are in the trade surplus.
