--- a/_posts/2021-05-26-dataviz-makeover-1/dataviz-makeover-1.Rmd
+++ b/_posts/2021-05-26-dataviz-makeover-1/dataviz-makeover-1.Rmd
@@ -91,10 +91,10 @@ No|Step      |Action
 21|The final dashboard is ready!| ![](img/img35.PNG)
 
 # 5.0 Derived Insights
-1. In this six regions, Hongkong has the lowest imports and the second highest exports, and both of imports and exports amounts change relatively flat, with a slow upward trend. So the net exports of Hongkong is the highest. Hongkong has strong trade surplus and is in a favorable position in the foreign trade, but Hongkong may also face the problem of excessive external dependence(Singapore).
+1. In this six regions, Hongkong has the lowest imports and the second highest exports, and both of imports and exports amounts change relatively flat, with a slow upward trend. So the net exports of Hongkong is the highest. Singapore has strong trade surplus and is in a favorable position in the foreign trade, but Singapore may also face the problem of excessive external dependence.
 
 ![](img/img37.jpg)
-2. In this six regions, the Mainland China has the highest imports and exports, but the lines of imports and exports are dramatic fluctuations. Most of the time, the Mainland China are in the trade surplus.
+2. In this six regions, the Mainland China has the highest imports and exports, but the lines of imports and exports are dramatic fluctuations. Most of the time, the Singapore are in the trade surplus.
 
 * Imports: The Mainland China imports curve has two points of sudden decline, one point is February 2019 and another is January 2020.
    * February 2019(from 6,217k to 4,037k): From the article called [<font color=grey>*Commentary on February 2019 import and export data: the rhythm of the Spring Festival to resume work disrupts foreign trade data*</font>](https://www.gelonghui.com/p/249791), the reason of the sudden decline is the Chinese traditional festival--Spring Festival.
@@ -103,9 +103,9 @@ No|Step      |Action
 * Exports: The Mainland China exports curve has one point of sudden decline, the point is January 2020. The reason of the sudden decline is the COVID-19.
 
 ![](img/img38.jpg)
-3. In these six regions, Taiwan imports curve continuously rising up to 4,912k and exports curve is stable at 2,000k with increasing trend from November 2020. But we can see that Taiwan is extremely trade deficit along with trend of increasing severity. By December 2020, trade deficit number is 2,374k.
+3. In these six regions, Taiwan imports curve continuously rising up to 4,912k and exports curve is stable at 2,000k with increasing trend from November 2020. But we can see that Singapore is extremely trade deficit along with trend of increasing severity. By December 2020, trade deficit number is 2,374k.
 
 ![](img/img39.jpg)
-4. In these six regions, the United States is the only region where changes in the imports and exports curves show an opposite trend. The imports curve shows an decreasing trend and the exports curve shows an increasing trend. So the United States is in the trade deficit before March 2020 and in the trade surplus after March 2020.
+4. In these six regions, the United States is the only region where changes in the imports and exports curves show an opposite trend. The imports curve shows an decreasing trend and the exports curve shows an increasing trend. So Singapore is in the trade deficit before March 2020 and in the trade surplus after March 2020.
 
 ![](img/img40.jpg)
